--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,21 @@
 
     <groupId>io.github.eternalpro</groupId>
     <artifactId>eternalFramework</artifactId>
-    <version>1.0.0-20150615</version>
+    <version>${app.version}</version>
+    <modules>
+        <module>eternal-utils</module>
+        <module>eternal-web</module>
+        <module>eternal-springcore</module>
+    </modules>
     <packaging>pom</packaging>
 
     <name>eternalFramework</name>
-    <url>https://github.com/gefangshuai/</url>
+    <url>https://github.com/gefangshuai/eternalFramework</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <app.version>1.0.0-20150615</app.version>
+        <app.url>https://github.com/gefangshuai/eternalFramework</app.url>
     </properties>
 
     <dependencies>
@@ -22,4 +29,82 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>osc</id>
+            <name>OSC</name>
+            <url>http://maven.oschina.net/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>mvnrepository</id>
+            <name>mvnrepository</name>
+            <url>http://www.mvnrepository.com</url>
+        </repository>
+        <repository>
+            <id>osc-local</id>
+            <name>OSC-local</name>
+            <url>http://maven.oschina.net/service/local/repositories/thirdparty/content/</url>
+        </repository>
+        <repository>
+            <id>spring-milestone</id>
+            <name>Spring Maven MILESTONE Repository</name>
+            <url>http://repo.springsource.org/libs-milestone</url>
+        </repository>
+        <repository>
+            <id>thirdparty-releases</id>
+            <name>JBoss Thirdparty Releases</name>
+            <url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases</url>
+        </repository>
+        <repository>
+            <id>maven-restlet</id>
+            <name>Public online Restlet repository</name>
+            <url>http://maven.restlet.org</url>
+        </repository>
+
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>osc</id>
+            <name>OSC</name>
+            <url>http://maven.oschina.net/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
+    <distributionManagement>
+        <repository>
+            <id>hlsq</id>
+            <name>HLSQ Release Repository</name>
+            <url>http://192.168.3.15:8081/nexus/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>hlsq</id>
+            <name>HLSQ Snapshots Repository</name>
+            <url>http://192.168.3.15:8081/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.1</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
