--- a/eternal-web/src/main/webapp/WEB-INF/web.xml
+++ b/eternal-web/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,14 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://java.sun.com/xml/ns/javaee"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+         http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+         version="2.5">
+    <display-name>spring-webapp</display-name>
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+
+    <session-config>
+        <session-timeout>20</session-timeout>
+    </session-config>
+
 </web-app>
