--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,12 @@
 
     <groupId>io.github.eternalpro</groupId>
     <artifactId>eternalFramework</artifactId>
-    <version>${app.version}</version>
+    <version>1.0.0-20150615</version>
     <modules>
         <module>eternal-utils</module>
         <module>eternal-web</module>
         <module>eternal-springcore</module>
+        <module>eternal-commons</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -20,15 +21,6 @@
         <app.version>1.0.0-20150615</app.version>
         <app.url>https://github.com/gefangshuai/eternalFramework</app.url>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
 
     <repositories>
         <repository>
