--- a/eternal-web/src/main/resources/db.properties
+++ b/eternal-web/src/main/resources/db.properties
@@ -5,6 +5,6 @@ jdbc.username=root
 jdbc.password=root
 
 hibernate.hbm2ddl=update
-hibernate.dialet=org.hibernate.dialect.MySQL5Dialect
-hibernate.show_sql=false
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+hibernate.show_sql=true
 hibernate.format_sql=true
