--- a/eternal-web/pom.xml
+++ b/eternal-web/pom.xml
@@ -14,7 +14,6 @@
     <properties>
         <spring-data-jpa.version>1.8.0.RELEASE</spring-data-jpa.version>
         <jackson.version>2.4.4</jackson.version>
-        <hibernate.version>4.3.7.Final</hibernate.version>
         <hibernate-validator.version>5.0.3.Final</hibernate-validator.version>
     </properties>
 
@@ -22,20 +21,16 @@
         <dependency>
             <groupId>io.github.eternalpro</groupId>
             <artifactId>eternal-utils</artifactId>
-            <version>1.0.0-20150615</version>
+            <version>${project.version}</version>
         </dependency>
+
         <dependency>
             <groupId>io.github.eternalpro</groupId>
-            <artifactId>eternal-springcore</artifactId>
-            <version>1.0.0-20150615</version>
-            <type>pom</type>
+            <artifactId>eternal-service</artifactId>
+            <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>io.github.eternalpro</groupId>
-            <artifactId>eternal-commons</artifactId>
-            <version>1.0.0-20150615</version>
-            <type>pom</type>
-        </dependency>
+
+
         <dependency>
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
@@ -48,32 +43,6 @@
         </dependency>
 
 
-        <!-- Hibernate4 -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>${hibernate.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate.javax.persistence</groupId>
-            <artifactId>hibernate-jpa-2.0-api</artifactId>
-            <version>1.0.1.Final</version>
-        </dependency>
-
-        <!-- for JPA, use hibernate-entitymanager instead of hibernate-core -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>${hibernate.version}</version>
-        </dependency>
-
-        <!-- 为了让Hibernate使用代理模式，需要javassist -->
-        <dependency>
-            <groupId>org.javassist</groupId>
-            <artifactId>javassist</artifactId>
-            <version>3.18.1-GA</version>
-        </dependency>
-
         <!-- JSON begin -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -85,19 +54,10 @@
             <artifactId>jackson-module-jaxb-annotations</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+
         <!-- JSON end -->
 
-        <!-- GENERAL UTILS end -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>1.0.13</version>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.34</version>
-        </dependency>
+
     </dependencies>
     <build>
         <plugins>
