--- a/eternal-commons/pom.xml
+++ b/eternal-commons/pom.xml
@@ -18,6 +18,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>io.github.eternalpro</groupId>
+            <artifactId>eternal-utils</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!-- apache commons -->
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -34,15 +39,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
         </dependency>
+
         <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
             <version>1.1.3</version>
-        </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
         </dependency>
 
         <dependency>
