--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>eternal-model</module>
         <module>eternal-dao</module>
         <module>eternal-service</module>
+        <module>eternal-api</module>
+        <module>eternal-mvc</module>
     </modules>
     <packaging>pom</packaging>
 
