--- a/eternal-web/src/main/resources/log4j.properties
+++ b/eternal-web/src/main/resources/log4j.properties
@@ -15,8 +15,7 @@ log4j.appender.RollingFile.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
 
 #Project defalult level
 log4j.logger.io.github.eternalpro=DEBUG
-#log4j.logger.org.springframework.web=DEBUG
-log4j.logger.org.apache.shiro=DEBUG
+log4j.logger.org.springframework=INFO
 
 #log4jdbc
 #log4j.logger.jdbc.sqlonly=INFO
