--- a/eternal-web/pom.xml
+++ b/eternal-web/pom.xml
@@ -14,10 +14,14 @@
     <dependencies>
         <dependency>
             <groupId>io.github.eternalpro</groupId>
-            <artifactId>eternal-mvc</artifactId>
+            <artifactId>eternal-service</artifactId>
             <version>${project.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
         <dependency>
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
