--- a/eternal-api/pom.xml
+++ b/eternal-api/pom.xml
@@ -14,14 +14,10 @@
     <dependencies>
         <dependency>
             <groupId>io.github.eternalpro</groupId>
-            <artifactId>eternal-service</artifactId>
+            <artifactId>eternal-mvc</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
-        </dependency>
+
     </dependencies>
     <build>
         <plugins>
