--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>eternal-dao</module>
         <module>eternal-service</module>
         <module>eternal-api</module>
+        <module>eternal-mvc</module>
     </modules>
     <packaging>pom</packaging>
 
