--- a/eternal-web/src/main/webapp/WEB-INF/web.xml
+++ b/eternal-web/src/main/webapp/WEB-INF/web.xml
@@ -10,5 +10,13 @@
     <session-config>
         <session-timeout>20</session-timeout>
     </session-config>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error/404.jsp</location>
+    </error-page>
 
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error/500.jsp</location>
+    </error-page>
 </web-app>
