--- a/eternal-mvc/src/main/resources/db.properties
+++ b/eternal-mvc/src/main/resources/db.properties
@@ -1,8 +1,8 @@
 #mysql database setting
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost/quickstart?useUnicode=true&characterEncoding=utf-8
-jdbc.username=root
-jdbc.password=root
+jdbc.url=jdbc:mysql://rds1u7yfvbjv485fbwvl0.mysql.rds.aliyuncs.com:3306/rh4sq66fhh26xnj2?useUnicode=true&characterEncoding=utf-8
+jdbc.username=rh4sq66fhh26xnj2
+jdbc.password=aibing0420
 
 hibernate.hbm2ddl=update
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
